@@ -29,7 +29,7 @@ import javafx.event.Event;
 import javafx.event.EventHandler;
 
 import org.jacp.api.action.IAction;
-import org.jacp.api.component.IStatefulCallbackComponent;
+import org.jacp.api.component.ICallbackComponent;
 import org.jacp.api.component.IStatelessCallabackComponent;
 import org.jacp.api.launcher.Launcher;
 import org.jacp.api.scheduler.IStatelessComponentScheduler;
@@ -50,9 +50,9 @@ public class StatelessCallbackScheduler implements
 			final IStatelessCallabackComponent<EventHandler<Event>, Event, Object> baseComponent) {
 		synchronized (baseComponent) {
 			// get active instance
-			final IStatefulCallbackComponent<EventHandler<Event>, Event, Object> comp = this
+			final ICallbackComponent<EventHandler<Event>, Event, Object> comp = this
 					.getActiveComponent(baseComponent);
-			List<IStatefulCallbackComponent<EventHandler<Event>, Event, Object>> componentInstances = baseComponent
+			List<ICallbackComponent<EventHandler<Event>, Event, Object>> componentInstances = baseComponent
 					.getInstances();
 			if (comp != null) {
 				if (componentInstances.size() < AStatelessCallbackComponent.MAX_INCTANCE_COUNT) {
@@ -85,7 +85,7 @@ public class StatelessCallbackScheduler implements
 	 */
 	private final void instanceRun(
 			final IStatelessCallabackComponent<EventHandler<Event>, Event, Object> baseComponent,
-			final IStatefulCallbackComponent<EventHandler<Event>, Event, Object> comp,
+			final ICallbackComponent<EventHandler<Event>, Event, Object> comp,
 			final IAction<Event, Object> message) {
 		comp.setBlocked(true);
 		comp.putIncomingMessage(message);
@@ -103,7 +103,7 @@ public class StatelessCallbackScheduler implements
 	private void createInstanceAndRun(
 			final IStatelessCallabackComponent<EventHandler<Event>, Event, Object> baseComponent,
 			final IAction<Event, Object> message) {
-		final IStatefulCallbackComponent<EventHandler<Event>, Event, Object> comp = this
+		final ICallbackComponent<EventHandler<Event>, Event, Object> comp = this
 				.getCloneBean(baseComponent,
 						((AStatelessCallbackComponent) baseComponent)
 								.getClass());
@@ -112,7 +112,7 @@ public class StatelessCallbackScheduler implements
 	}
 
 	@Override
-	public <T extends IStatefulCallbackComponent<EventHandler<Event>, Event, Object>> IStatefulCallbackComponent<EventHandler<Event>, Event, Object> getCloneBean(
+	public <T extends ICallbackComponent<EventHandler<Event>, Event, Object>> ICallbackComponent<EventHandler<Event>, Event, Object> getCloneBean(
 			final IStatelessCallabackComponent<EventHandler<Event>, Event, Object> baseComponent,
 			Class<T> clazz) {
 		return ((AStatelessCallbackComponent) baseComponent).init(this.launcher
@@ -124,12 +124,12 @@ public class StatelessCallbackScheduler implements
 	 * 
 	 * @return
 	 */
-	private final IStatefulCallbackComponent<EventHandler<Event>, Event, Object> getActiveComponent(
+	private final ICallbackComponent<EventHandler<Event>, Event, Object> getActiveComponent(
 			final IStatelessCallabackComponent<EventHandler<Event>, Event, Object> baseComponent) {
-		final List<IStatefulCallbackComponent<EventHandler<Event>, Event, Object>> componentInstances = baseComponent
+		final List<ICallbackComponent<EventHandler<Event>, Event, Object>> componentInstances = baseComponent
 				.getInstances();
 		for (int i = 0; i < componentInstances.size(); i++) {
-			final IStatefulCallbackComponent<EventHandler<Event>, Event, Object> comp = componentInstances
+			final ICallbackComponent<EventHandler<Event>, Event, Object> comp = componentInstances
 					.get(i);
 			if (!comp.isBlocked()) {
 				return comp;
@@ -150,7 +150,7 @@ public class StatelessCallbackScheduler implements
 			final IAction<Event, Object> message) {
 		// if max count reached, seek through components and add
 		// message to queue of oldest component
-		final IStatefulCallbackComponent<EventHandler<Event>, Event, Object> comp = baseComponent
+		final ICallbackComponent<EventHandler<Event>, Event, Object> comp = baseComponent
 				.getInstances().get(this.getSeekValue(baseComponent));
 		// put message to queue
 		comp.putIncomingMessage(message);
